Add daily seeded challenge mode with deterministic RNG

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>Score: <span id="score">0</span></p>
         <p>Combo: <span id="combo">x1</span></p>
         <p>Mode: <span id="mode">Classic</span></p>
+        <p>Daily Seed (UTC): <span id="seed"></span></p>
         <button id="pause-btn" type="button">Pause</button>
         <button id="restart-btn" type="button">Restart</button>
       </div>
